--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,7 @@
+/*Heading no longer uses horrid font*/
+.h1{
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
@@ -13,6 +17,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Change the color of links on hover */
