--- a/Style.css
+++ b/Style.css
@@ -45,4 +45,5 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-size: large;
   }
