--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,10 @@ h2{
   overflow: hidden;
 }
 
+m{
+  color:red;
+}
+
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
